--- a/src/templates/vacancies.jade
+++ b/src/templates/vacancies.jade
@@ -40,6 +40,10 @@ block content
                 .b-slider__item
                     img.img-responsive(src='http://placehold.it/1000x350')
 
+            .b-text.g-mb60
+                p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae nunc ac eleifend. Duis faucibus sollicitudin condimentum. Ut viverra placerat luctus. Nam vulputate egestas ex nec blandit. Integer feugiat nisi id mauris commodo lacinia. Aliquam erat volutpat. Donec dui turpis, condimentum eu ante et, porttitor malesuada erat. Morbi imperdiet diam id consectetur hendrerit. Ut id ullamcorper libero. Integer porttitor iaculis elit, nec condimentum neque accumsan et. Maecenas quam lacus, mattis id tellus eget, porta aliquam tellus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras laoreet nunc felis, id fringilla risus auctor non. Fusce nec ornare eros. Mauris malesuada urna orci, in tincidunt tortor auctor sit amet.
+                p Sed quis lacinia risus, a ullamcorper metus. Aliquam mollis imperdiet augue, non suscipit purus blandit vel. Aenean at sagittis mi. Curabitur finibus nisl non pharetra aliquam. Nulla semper leo et nibh faucibus gravida. Ut et mi lorem. Pellentesque cursus vitae ex id fringilla. Vivamus tristique odio in aliquet laoreet. Proin ac diam eget est ullamcorper mollis a porttitor sapien. Nulla elementum dui felis, vitae feugiat est semper in.
+
             h2.b-page__title Актуальные вакансии
 
         .b-vacancies
