--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,11 +14,14 @@
 @import "./icons.css" layer(components);
 @import "./forms.css" layer(components);
 @import "../blocks/b-cta/cta.css" layer(components);
+@import "./contact-switcher.css" layer(components);
 
 @theme {
     --font-sans: 'Craftwork Sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     --font-serif: 'Craftwork Grotesk', ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
     --font-glina: 'Glina Script', sans-serif;
+
+    --shadow-contact-switcher-label: 0 2px 8px 0 rgba(22, 31, 106, 0.08);
 
     --text-tiny: 0.625rem;
     --text-tiny--line-height: 0.875rem;
@@ -28,6 +31,10 @@
     --color-blue-620: #2E55DB;
     --color-blue-680: #2146C4;
     --color-blue-900: #161F6A;
+
+    --color-purple-500: #AB67FE;
+
+    --color-lime-500: #A8E000;
 
     --color-red-500: #FD324A;
 
@@ -58,8 +65,6 @@
     --container-3xl: 1520px;  /* 1600px */
     --container-4xl: 1800px;  /* 1520px */
 }
-
-@source inline('bg-slate-40');
 
 @layer utilities {
     .container {
