--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -24,8 +24,60 @@
 
     <!-- Правая часть - форма -->
     <div class="flex flex-col gap-2 w-[578px]">
-        <div class="bg-white rounded-28 h-[140px]"></div>
-        <form class="bg-white rounded-28 flex-1 flex flex-col p-3">
+        <!-- Contact switcher -->
+        <div class="flex items-start justify-between p-4 pb-7 bg-white rounded-28 h-[140px]">
+
+            <!-- Дима -->
+            <div data-active="true" class="group contact-switcher__item contact-switcher__item_dima">
+                <div class="contact-switch">
+                    <div class="contact-switch__ring_dima"></div>
+                    <div class="contact-switch__img contact-switch__img_dima"></div>
+                    <div class="contact-switch__label contact-switch__label_dima">
+                        Дима, СЕО
+                    </div>
+                    <div class="contact-switch__connector"></div>
+                </div>
+                <div class="contact-switcher__info">
+                    <div class="contact-switcher__line1">Наведём движ?</div>
+                    <a href="mailto:hello@tolkunov.com" class="contact-switcher__line2">hello@tolkunov.com</a>
+                </div>
+            </div>
+
+            <!-- Таня -->
+            <div data-active="false" class="group contact-switcher__item contact-switcher__item_tanya">
+                <div class="contact-switch">
+                    <div class="contact-switch__ring_tanya"></div>
+                    <div class="contact-switch__img contact-switch__img_tanya"></div>
+                    <div class="contact-switch__label contact-switch__label_tanya">
+                        Таня, PR
+                    </div>
+                    <div class="contact-switch__connector"></div>
+                </div>
+                <div class="contact-switcher__info">
+                    <div class="contact-switcher__line1">Посотрудничаем?</div>
+                    <a href="mailto:pr@tolkunov.com" class="contact-switcher__line2">pr@tolkunov.com</a>
+                </div>
+            </div>
+
+            <!-- Оля -->
+            <div data-active="false" class="group contact-switcher__item contact-switcher__item_olya">
+                <div class="contact-switch">
+                    <div class="contact-switch__ring_olya"></div>
+                    <div class="contact-switch__img contact-switch__img_olya"></div>
+                    <div class="contact-switch__label contact-switch__label_olya">
+                        Оля, HR
+                    </div>
+                    <div class="contact-switch__connector"></div>
+                </div>
+                <div class="contact-switcher__info">
+                    <div class="contact-switcher__line1">Нужна работа?</div>
+                    <a href="mailto:hr@tolkunov.com" class="contact-switcher__line2">hr@tolkunov.com</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Contact form -->
+        <form class="bg-white rounded-28 flex-1 flex flex-col p-3" method="post">
             <div class="space-y-5 p-3">
                 <div class="form-row">
                     <label class="form-label">Услуги</label>
@@ -77,7 +129,8 @@
                 </div>
 
                 <div class="form-row">
-                    <textarea name="description" class="form-field resize-y min-h-8 max-h-27" rows="1" auto-grow placeholder="Опишите задачу: чем больше информации, тем лучше"></textarea>
+                    <textarea name="description" class="form-field resize-y min-h-8 max-h-27" rows="1" auto-grow
+                              placeholder="Опишите задачу: чем больше информации, тем лучше"></textarea>
                 </div>
                 <div class="form-row">
                     <input type="text" name="name" class="form-field error" placeholder="Имя">
@@ -98,9 +151,9 @@
 
                     <span class="text-xs leading-4.5 !font-medium">
                         Даю согласие на обработку моих
-                        <a href="https://ya.ru" target="_blank" class="text-blue-600 underline hover:no-underline">персональных данных</a>
+                        <a href="https://tolkunov.com/view/terms.pdf" target="_blank" class="text-blue-600 underline hover:no-underline">персональных данных</a>
                         в соответствии с
-                        <a href="https://ya.ru" target="_blank" class="text-blue-600 underline hover:no-underline">политикой конфиденциальности</a>
+                        <a href="https://tolkunov.com/view/privacy.pdf" target="_blank" class="text-blue-600 underline hover:no-underline">политикой конфиденциальности</a>
                     </span>
                 </label>
             </div>
